# nn-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Config.h  Fixed.h  ML.cpp  ML.h  Model.cpp  Model.h  Types.h  Utils.cpp  Utils.h
src/layers/: Convolutional.cpp  Convolutional.cu  Convolutional.h  Dense.cpp  Dense.cu  Dense.h  Flatten.cpp  Flatten.h  Layer.cpp  Layer.h  MaxPooling.cpp  MaxPooling.cu  MaxPooling.h  Softmax.cpp  Softmax.cu  Softmax.h
